--- a/app/pom.xml
+++ b/app/pom.xml
@@ -649,12 +649,13 @@
                 <version>2.8.5</version>
               </dependency>
               <!-- override plexus-compiler-javac-errorprone's dependency on
-             Error Prone with the latest version -->
+             Error Prone with the latest version 
               <dependency>
                 <groupId>com.google.errorprone</groupId>
                 <artifactId>error_prone_core</artifactId>
                 <version>${errorprone.version}</version>
               </dependency>
+-->
             </dependencies>
           </plugin>
         </plugins>
